fixed the display on small screens

--- a/pages/css/mobile.css
+++ b/pages/css/mobile.css
@@ -16,7 +16,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     /* margin: 0 auto; */
     max-width: 100%;
     min-width: 350px;
@@ -50,8 +50,6 @@
   .navbar {
     display: block;
     position: sticky;
-    /* overflow-wrap: break-word; */
-    /* white-space: normal; */
     background-color: #e6ecf0;
     width:100vw;
     min-width: 350px;
