--- a/pages/css/modals.css
+++ b/pages/css/modals.css
@@ -31,7 +31,7 @@ body {
 
 .overlay-content {
   position: relative;
-  top: 46%;
+  top: 30%;
   width: 80%;
   text-align: center;
   margin-top: 30px;
